# odrive-linux

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  nautilus_extension.py  research.md
.github/workflows/: dco.yml  release.yml
debian/: README.source  changelog  control  copyright  odrive-linux-dolphin.install  odrive-linux-dolphin.postinst  odrive-linux-dolphin.postrm  odrive-linux.install  odrive-linux.lintian-overrides  rules
docs/man/: odrive-cli.1  odrive-gui.1
dolphin-plugin/: CMakeLists.txt
dolphin-plugin/action/: CMakeLists.txt  OdriveAction.cpp  OdriveAction.h  odrive_action.json
dolphin-plugin/common/: CMakeLists.txt  OdriveContext.cpp  OdriveContext.h
dolphin-plugin/overlay/: CMakeLists.txt  OdriveOverlay.cpp  OdriveOverlay.h  odrive_overlay.json
odrive-cli/: Cargo.toml
odrive-cli/src/: main.rs
odrive-core/: Cargo.toml
odrive-core/src/: config.rs  db.rs  lib.rs
odrive-gui/: Cargo.toml
odrive-gui/src/: backup_page.rs  encrypt_page.rs  indicator.rs  log_viewer.rs  main.rs  mount_detail.rs  settings_page.rs  toasts.rs  trash_page.rs  wizard.rs  worker.rs
packaging/: build-local.sh
packaging/rpm/: odrive-linux.spec
