[package]
name = "odrive-gui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Keith Vassallo <keith@icemalta.com>"]
description = "GTK4/Libadwaita manager for the odrive on-demand cloud sync agent."
repository = "https://github.com/keithvassallomt/odrive-linux"

[dependencies]
odrive-core = { path = "../odrive-core" }
serde_json = "1.0"
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
ksni = { version = "0.3", features = ["blocking"] }
